# physical-ai-humanoid-textbook-hackathon

./: .gitignore  DEPLOYMENT_GUIDE.md  DEPLOYMENT_HF_GUIDE.md  LICENSE  README.md  vercel.json  vercel_new.json
backend/: .env.example  .env.production  .gitignore  .pre-commit-config.yaml  .railway.yml  Dockerfile  RAILWAY_README.md  README.md  app.py  app.yaml  pyproject.toml  railway.toml  render.yaml  requirements-dev.txt  requirements.txt
backend/api/: index.py  requirements.txt
backend/src/: config.py  main.py
backend/src/api/: auth_router.py  better_auth_router.py  chat_router.py  health.py  personalization_router.py  search_router.py  textbook_router.py  user_router.py
backend/src/db/: models.py  session.py
backend/src/embeddings/: __init__.py  content_processor.py  embedding_service.py  generator.py
backend/src/models/: chapter.py  chat_interaction.py  content_block.py  embedding_vector.py  textbook.py  user_session.py
backend/src/services/: content_service.py  embedding_search.py  embedding_service.py  personalization_service.py  rag_service.py  translation_service.py  user_service.py  validation.py  vector_db.py
backend/src/utils/: __init__.py  auth.py  error_handlers.py  exceptions.py  logging_config.py  validators.py
backend/tests/contract/: test_chat.py  test_deployment.py  test_localization.py  test_search.py  test_textbook.py
backend/tests/integration/: test_health.py  test_navigation.py  test_personalization.py  test_rag.py  test_search.py
backend/tests/unit/: test_content_service.py  test_embedding_search.py  test_user_service.py
(+81 files in other folders)
